feat: admin ui
